trunk/Archive2/aa/29eb6e6e98321d/output
main.cpp:5:1: error: static_assert failed "No tag founded"
static_assert(false, "No tag founded");
^             ~~~~~
1 error generated.
